--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -56,3 +56,31 @@ h1, h2, h3, h4, h5, h6 {
 
 
 /* our work start here */
+.wrapper{
+    height: 100vh;
+    margin:0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    padding: 0 2rem ;
+}
+
+body {
+    color: white;
+    font-size: 16px;
+    font-family: "Montserrat", sans-serif;
+}
+
+.headlines {
+    font-family: "Boldonse", system-ui;
+    font-weight: 600;
+    font-style: normal;
+    padding:2rem 0
+}
+
+.sub-headlines {
+    font-family: "Boldonse", system-ui;
+    font-weight: 600;
+    font-style: normal;
+    padding:1rem 0
+}
