--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    color: white;
+    color: #333; /* Ändra tillbaka till white before push */
     font-size: 16px;
     font-family: "Montserrat", sans-serif;
 }
@@ -84,3 +84,41 @@ body {
     font-style: normal;
     padding:1rem 0
 }
+
+
+/* Olivia START */
+
+
+
+.p-contact2 {
+    margin-top: 20px;
+    font-size: 1.5rem;
+    font-weight: bold;
+}
+
+.p-slash {
+    color: #1D9FCF; /* Turquoise */
+    font-weight: 700;
+}
+
+.a-contact {
+    color: #333;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+
+/* Icons */
+.icon-wrapper {
+    display: flex;
+    flex-direction: row;
+}
+
+.icon-contact {
+    width: 20px;
+    margin: 0 3px;
+}
+
+
+
+/* Olivia END */
