--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -66,7 +66,7 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 body {
-    color: white;
+    color: black;
     font-size: 16px;
     font-family: "Montserrat", sans-serif;
 }
@@ -83,4 +83,114 @@ body {
     font-weight: 600;
     font-style: normal;
     padding:1rem 0
+}
+
+/* Dennis CSS */
+
+.elementor-testimonials {
+    padding: 20px;
+    margin: 15px;
+}
+
+.testim {
+    padding: 20px;
+    font-size: 1.3em;
+    font-style: italic;
+}
+
+.testim-footer {
+    display: flex;
+    align-items: center;
+    gap: 20px;
+}
+
+.testim-img img {
+   width: 300px;
+   height: auto;
+   border-radius: 999px;
+}
+
+.testim-name {
+    display: flex;
+    flex-direction: column;
+    gap: 10px;
+}
+
+/* Carousel code */
+
+.elementor-testimonials.carousel {
+    position: relative;
+    overflow: visible;
+    padding: 20px;
+    margin: 15px;
+}
+
+.elementor-testimonials {
+    position: relative;
+    padding: 20px;
+    margin: 15px;
+}
+
+.slides {
+    position: relative;
+    height: auto;
+    min-height: 0;
+    transition: height 300ms ease;
+}
+
+.slide {
+    position: absolute;
+    inset: 0;
+    opacity: 0;
+    transition: opacity 0.5s ease;
+    pointer-events: none;
+    z-index: 1;
+}
+.slide.active {
+    opacity: 1;
+    pointer-events: auto;
+}
+
+/* --- Arrows --- */
+
+.prev, .next {
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    border: none;
+    z-index: 3;
+    background: rgba(0, 0, 0, 0);
+    color: #ccc;
+    font-size: 22px;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    cursor: pointer;
+}
+.prev { 
+    left: -20px; 
+}
+.next { 
+    right: -20px; 
+}
+
+.dots {
+    position: static;
+    display: flex;
+    justify-content: center;
+    gap: 10px;
+    margin-top: 15px;
+    
+}
+.dots button {
+    width: 10px;
+    height: 10px;
+    border: none;
+    border-radius: 50%;
+    background: #ccc;
+    cursor: pointer;
+    z-index: 5;
+}
+.dots button.active {
+    background: #333;
 }
