--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -84,3 +84,19 @@ body {
     font-style: normal;
     padding:1rem 0
 }
+
+
+/*nav bar mobile*/
+.mob-nav {
+    color: #000;
+    height:100px;
+    padding: 0 20px;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    background-color: rgb(255 255 255 / 0.2);
+    backdrop-filter: blur(10px);
+    position: fixed;
+    width: 100%;
+    box-shadow: 0 0 6px rgba(0, 0, 0, .26);
+}
