--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -99,12 +99,14 @@ h1, h2, h3, h4, h5, h6 {
     padding: 20px;
     font-size: 1.3em;
     font-style: italic;
+    color: #000000;
 }
 
 .testim-footer {
     display: flex;
     align-items: center;
     gap: 20px;
+    color: #000000;
 }
 
 .testim-img {
