--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -75,6 +75,7 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    padding: 0 30px;
 }
 
 .headlines {
