--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -69,7 +69,7 @@ body {
 }
 .wrapper{
     /* allow page to grow while ensuring at least full viewport height */
-    min-height: 100vh;
+    /* min-height: 100vh; */
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -408,7 +408,7 @@ body {
 
 /* push the footer to the bottom when wrapper is a column flex container */
 .glass-footer{
-    margin-top: auto;
+    margin-top: 100px;
 }
 
 .glass-footer::before {
@@ -579,10 +579,6 @@ body {
         padding: 0 20px;
     }
 
-    .dropdown:not(:last-child) {
-        border-right: 1px solid #ddd;
-    }
-
     .arrow {
         display: none;
     }
@@ -620,6 +616,10 @@ body {
         padding: 1.5rem;
         align-items: stretch;
         min-height: auto;
+    }
+
+    .glass-footer {
+        width: 100%;
     }
 }
 
