--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -65,11 +65,22 @@ h1, h2, h3, h4, h5, h6 {
 /* our work start here */
 
 body {
-    background: linear-gradient(135deg, #000000 0%, #1a1a1a 50%, #333333 100%);
+    background-color: #fff;
 }
 .wrapper{
     /* allow page to grow while ensuring at least full viewport height */
-    /* min-height: 100vh; */
+    min-height: 50vh;
+    margin: 0;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding: 0 30px;
+}
+
+.headwrapper{
+    /* allow page to grow while ensuring at least full viewport height */
+    min-height: 100vh;
     margin: 0;
     display: flex;
     flex-direction: column;
@@ -210,6 +221,7 @@ body {
     background: #F62584;
     background: linear-gradient(to right, #F62584 23%, #3A0CA2 68%);
     -webkit-text-fill-color: transparent;
+
 }
 
 .featured-image {
@@ -225,7 +237,7 @@ body {
 .header-text {
     display: flex;
     align-items: center;
-    max-width: 700px;
+    max-width: 675px;
 }
 /* Olivia START */
 
@@ -235,6 +247,7 @@ body {
     margin-top: 20px;
     font-size: 1.5rem;
     font-weight: bold;
+    color: black;
 }
 
 .p-slash {
@@ -280,14 +293,14 @@ body {
     padding: 20px;
     font-size: 1.3em;
     font-style: italic;
-    /* color: #000000; */
+    color: #000000;
 }
 
 .testim-footer {
     display: flex;
     align-items: center;
     gap: 20px;
-    /* color: #000000; */
+    color: #000000;
 }
 
 .testim-img {
@@ -634,6 +647,8 @@ body {
         padding: 1.5rem;
         align-items: stretch;
         min-height: auto;
+        max-width: 1200px;
+        margin: 0px auto;
     }
 
     .glass-footer {
@@ -648,7 +663,7 @@ body {
     padding: 1.5rem;
     margin: 2rem auto;
     max-width: 90%;
-    background-color: #4d4e4f;
+    background-color: #ccc;
     color: #000000;
     border-radius: 12px;
     line-height: 1.7;
@@ -723,7 +738,7 @@ body {
 }
 
 .accordion {
-    background: #4d4e4f;
+    background: #ccc;
     padding: 1.5rem;
 }
 
