--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -220,7 +220,7 @@ body {
 .highlighted {
     background: #F62584;
     background: linear-gradient(to right, #F62584 23%, #3A0CA2 68%);
-    -webkit-text-fill-color: transparent;
+    /* -webkit-text-fill-color: transparent; */
 
 }
 
@@ -266,10 +266,11 @@ body {
 .icon-wrapper {
     display: flex;
     flex-direction: row;
+    margin-top: 10px;
 }
 
 .icon-contact {
-    width: 20px;
+    width: 50px;
     margin: 0 3px;
 }
 
@@ -287,6 +288,7 @@ body {
     display: flex;
     justify-content: center;
     font-size: 25px;
+    color: #000;
 }
 
 .testim {
